--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -35,7 +35,7 @@
 
 @pandas-color:#7b5195;
 @flask-color:#be90ca;
-@code-color:#47638c;
+@code-color:#6691c8;
 @aws-color:#cc9543;
 @mysql-color:#5f6bbd;
 @mongdb-color:#86af96;
