--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -452,23 +452,21 @@
 				&.data-analysis-pandas {
 					background:@pandas-color;
 				}
-
 				&.adventures-in-excel {
 					background:@excel-color;
 				}
-
 				&.building-flask-apps {
 					background:@flask-color;
 				}
-
 				&.code-snippet-corner {
 					background:@code-color;
 				}
-
 				&.create-an-aws-api {
 					background:@aws-color;
 				}
-
+				&.the-rise-of-google-cloud{
+					background:@google-color;
+				}
 				&.working-with-mysql {
 					background:@mysql-color;
 				}
@@ -479,7 +477,6 @@
 					background:@tableau-color;
 				}
 			}
-
 		}
 
 		.pandas {
@@ -527,6 +524,7 @@
 		.mongodb-cloud svg {fill: @mongdb-color}
 		.hacking-tableau-server i {color: @tableau-color}
 		.adventures-in-excel svg {color: @excel-color}
+		.the-rise-of-google-cloud i {color: @google-color}
 
 		.series-image {
 			margin-right: 20px;
