--- a/src/less/pages.less
+++ b/src/less/pages.less
@@ -12,3 +12,5 @@
 @import 'pages/python-page.less';
 @import 'pages/customtemplates.less';
 @import 'pages/series.less';
+@import 'pages/githubcard.less';
+@import 'pages/cover.less';
