--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -215,14 +215,14 @@
 		font-family: 'TTNorms-Regular';
 		transition: all 0.2s ease-out;
 		font-size: .85em;
-		border: 1px solid rgba(136, 190, 228, 0.2);
+		background: rgba(255, 255, 255, 0.07);
 
 		&:hover {
 			cursor: pointer;
 			background: @hover-color;
 			color: white !important;
 			box-shadow: 1px 1px 2px #239084;
-			border: 1px solid darken(@hover-color, 20%);
+			/*border: 1px solid darken(@hover-color, 20%);*/
 		}
 	}
 }
