--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -256,7 +256,8 @@
 			transition: all 0.2s ease;
 			margin: 0 8px 8px 0;
 			padding: 7px 12px;
-			border: 1px solid #c9d5e4;
+			border: 1px solid #c9d5e48c;
+    	background: rgba(255, 255, 255, 0.5);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
 				margin: 0 5px 5px 0;
