--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -7,6 +7,7 @@
 	background: white;
 	padding: 40px;
 	margin-bottom: 30px;
+	width: 100%;
 	@media(max-width: 600px) {
 		margin-left: calc(~"-50vw + 50%") !important;
 		margin-right: calc(~"-50vw + 50%") !important;
