works good enough

--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -23,7 +23,7 @@
   }
 
   .title {
-    font-family: 'TTNorms-Regular';
+    font-family: 'FFMarkWebProBook';
     font-size: 1.3em;
     font-weight: 600;
     color: #326671;
