--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -98,7 +98,7 @@
 		margin: 15px 0;
 		text-transform: none;
 		font-size: 1em;
-		font-family: 'TTNorms-Regular',sans-serif;
+		font-family: 'FFMarkWebProBook',sans-serif;
 		font-size: 0.9em;
 		line-height: 1.6;
 		@media(max-width: 600px) {
@@ -212,7 +212,7 @@
 		width: fit-content;
 		flex-grow: 1;
 		text-align: center;
-		font-family: 'TTNorms-Regular';
+		font-family: 'FFMarkWebProBook';
 		transition: all 0.2s ease-out;
 		font-size: .85em;
 		background: rgba(255, 255, 255, 0.07);
@@ -239,7 +239,7 @@
 			padding: 12px 0;
 			font-size: 18px;
 			font-weight: 200;
-			font-family: 'TTNorms-Bold', serif;
+			font-family: 'FFMarkWebProMedium', serif;
 			transition: all 0.2s ease;
 			border-bottom: 1px dashed rgba(255, 255, 255, 0.1) !important;
 			line-height: 1;
@@ -279,7 +279,7 @@
 			.role {
 				color: hsla(0, 0%, 100%, 0.7);
 				display: block;
-				font-family: 'TTNorms-Regular';
+				font-family: 'FFMarkWebProBook';
 				font-size: 0.8em;
 				line-height: 1.2;
 				margin-top: 6px;
