--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -34,7 +34,7 @@
       .tag-name {
         font-size: 2.2em;
         color: white !important;
-        font-family: 'TTNorms-Regular';
+        font-family: 'FFMarkWebProBook';
         text-shadow: 0 0 20px #2f2d56;
         margin-top: 110px;
       }
@@ -85,7 +85,7 @@
         min-height: 60px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: TTNorms-Regular;
+        font-family: FFMarkWebProBook;
         font-size: 1em;
         text-overflow: ellipsis;
       }
@@ -103,7 +103,7 @@
         .btn {
           padding: 12px 20px;
           font-size: 16px;
-          font-family: TTNorms-Regular,sans-serif;
+          font-family: FFMarkWebProBook,sans-serif;
           a {
             line-height: 1;
             height: fit-content;
