--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -43,7 +43,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'TTNorms-Regular',sans-serif !important;
+			font-family: 'FFMarkWebProBook',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -149,9 +149,9 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'ProductSans-Regular', 'TTNorms-Bold',TTNorms-Medium,serif;
+			font-family: 'ProductSans-Regular', 'FFMarkWebProMedium',TTNorms-Medium,serif;
 			@media(max-width: 600px) {
-				font-family: 'ProductSans-Regular',TTNorms-Bold,TTNorms-Medium,serif;
+				font-family: 'ProductSans-Regular',FFMarkWebProMedium,TTNorms-Medium,serif;
 				font-size: 1em !important;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
@@ -212,7 +212,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'TTNorms-Bold','TTNorms-Medium', 'sans-serif';
+			font-family: 'FFMarkWebProMedium','TTNorms-Medium', 'sans-serif';
 		}
 
 		.author-mobile {
@@ -246,7 +246,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'TTNorms-Bold';
+				font-family: 'FFMarkWebProMedium';
 				color: #224a69;
 			}
 			@media (max-width: 800px) {
@@ -256,7 +256,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'TTNorms-Bold','TTNorms-Medium';
+			font-family: 'FFMarkWebProMedium','TTNorms-Medium';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -413,6 +413,7 @@
 		border-right: 2px solid #009c83;
 		border-bottom: 2px solid #009c83;
 		background: linear-gradient(135deg,#4fc388,#21b6b7);
+		color: white;
 		font-family: 'ProductSans-Medium',sans-serif;
 		font-size: 18px;
 		font-weight: 600;
