--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -47,7 +47,7 @@
 
 			&::placeholder {
 				color: #828294;
-				font-family: 'TTNorms-Regular',sans-serif!important;
+				font-family: 'FFMarkWebProBook',sans-serif!important;
 			}
 
 			&:hover {
@@ -250,7 +250,7 @@
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			font-family: 'TTNorms-Regular',sans-serif;
+			font-family: 'FFMarkWebProBook',sans-serif;
 			flex-grow: 1;
 			text-align: center;
 			transition: all 0.2s ease;
@@ -657,7 +657,7 @@
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: 'TTNorms-Medium',TTNorms-Bold,serif;
+		font-family: 'TTNorms-Medium',FFMarkWebProMedium,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
