--- a/src/less/pages/author.less
+++ b/src/less/pages/author.less
@@ -84,7 +84,7 @@
 
 					.name {
 						font-size: 1.2em;
-						font-family: 'TTNorms-Bold', '', sans-serif;
+						font-family: 'FFMarkWebProMedium', '', sans-serif;
 					}
 
 					.country,
@@ -174,7 +174,7 @@
 								line-height: 1.1;
 								width: 100%;
 								height: 14px;
-								font-family: 'TTNorms-Bold';
+								font-family: 'FFMarkWebProMedium';
 								margin-top: 3px;
 							}
 						}
@@ -185,7 +185,7 @@
 							display: inline-block!important;
 							line-height: 1.4;
 							padding-top: 5px;
-							font-family: 'TTNorms-Bold',sans-serif;
+							font-family: 'FFMarkWebProMedium',sans-serif;
 						}
 					}
 
@@ -280,7 +280,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'TTNorms-Bold', '', sans-serif;
+			font-family: 'FFMarkWebProMedium', '', sans-serif;
 		}
 
 		i {
