--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -50,7 +50,7 @@
 	}
 
 	.meta-info {
-		font-family: 'TTNorms-Regular',sans-serif;
+		font-family: 'FFMarkWebProBook',sans-serif;
 		font-size: 0.9em;
 		display: flex;
 		justify-content: space-around;
