--- a/src/less/pages/kanban.less
+++ b/src/less/pages/kanban.less
@@ -217,7 +217,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'TTNorms-Medium',TTNorms-Bold;
+        font-family: 'TTNorms-Medium',FFMarkWebProMedium;
         /*  &::after {
           content: "";
           width: 90px;
