--- a/src/less/pages/projects-page.less
+++ b/src/less/pages/projects-page.less
@@ -18,7 +18,7 @@
   }
 
   h3 {
-    font-family: 'TTNorms-Regular',sans-serif;
+    font-family: 'FFMarkWebProBook',sans-serif;
     margin-bottom: 0;
     font-size: 1.4em;
   }
@@ -242,7 +242,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'TTNorms-Medium',TTNorms-Bold;
+        font-family: 'TTNorms-Medium',FFMarkWebProMedium;
         /*  &::after {
           content: "";
           width: 90px;
