--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -108,7 +108,7 @@
       text-transform: capitalize;
       line-height: 1;
       font-size: 1em;
-      font-family: 'TTNorms-Medium','TTNorms-Bold';
+      font-family: 'TTNorms-Medium','FFMarkWebProMedium';
       color: #224a69;
     }
     @media (max-width: 600px) {
