--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -39,7 +39,7 @@
 			transition: all .3s;
 			line-height: 1;
 			padding: 8px 10px;
-			font-family: 'TTNorms-Regular';
+			font-family: 'FFMarkWebProBook';
 			border-radius: 2px;
 			transition: all .3s ease-out;
 			@media(max-width:800px) {
