--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,8 +1,8 @@
-@import (css) url("//hello.myfonts.net/count/38821c?css");
+@import (css)  url("//hello.myfonts.net/count/388810?css");
 
-@font-face {font-family: 'TTNorms-Bold';src: url('../../../assets/fonts/38821C_0_0.eot');src: url('../../../assets/fonts/38821C_0_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38821C_0_0.woff2') format('woff2'),url('../../../assets/fonts/38821C_0_0.woff') format('woff'),url('../../../assets/fonts/38821C_0_0.ttf') format('truetype');}
-@font-face {font-family: 'TTNorms-Medium';src: url('../../../assets/fonts/38821C_1_0.eot');src: url('../../../assets/fonts/38821C_1_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38821C_1_0.woff2') format('woff2'),url('../../../assets/fonts/38821C_1_0.woff') format('woff'),url('../../../assets/fonts/38821C_1_0.ttf') format('truetype');}
-@font-face {font-family: 'TTNorms-Regular';src: url('../../../assets/fonts/38821C_2_0.eot');src: url('../../../assets/fonts/38821C_2_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38821C_2_0.woff2') format('woff2'),url('../../../assets/fonts/38821C_2_0.woff') format('woff'),url('../../../assets/fonts/38821C_2_0.ttf') format('truetype');}
+
+@font-face {font-family: 'FFMarkWebProBook';src: url('../../../assets/fonts/388810_1_0.eot');src: url('../../../assets/fonts/388810_1_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/388810_1_0.woff2') format('woff2'),url('../../../assets/fonts/388810_1_0.woff') format('woff'),url('../../../assets/fonts/388810_1_0.ttf') format('truetype');}
+@font-face {font-family: 'FFMarkWebProMedium';src: url('../../../assets/fonts/388810_2_0.eot');src: url('../../../assets/fonts/388810_2_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/388810_2_0.woff2') format('woff2'),url('../../../assets/fonts/388810_2_0.woff') format('woff'),url('../../../assets/fonts/388810_2_0.ttf') format('truetype');}
 
 
 /* latin */
