--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -84,7 +84,7 @@
       }
 
       .sort-title {
-        font-family: 'TTNorms-Bold';
+        font-family: 'FFMarkWebProMedium';
       }
 
       .sort-method {
@@ -123,7 +123,7 @@
       padding: 10px;
       background: #1ab1d4;
       color: #fff;
-      font-family: 'TTNorms-Bold';
+      font-family: 'FFMarkWebProMedium';
       box-shadow: 1px 1px 1px rgba(55, 70, 99, 0.9);
       line-height: 1;
     }
