--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -164,7 +164,7 @@
           margin: 5px 0;
           line-height: 1.5;
           text-align: left;
-          font-family: 'TTNorms-Regular';
+          font-family: 'FFMarkWebProBook';
           flex-grow: 1;
           flex-shrink: 0;
           flex-basis: auto;
@@ -183,7 +183,7 @@
           bottom: 20px;
           right: 20px;
           font-size: 0.9em;
-          font-family: 'TTNorms-Bold';
+          font-family: 'FFMarkWebProMedium';
         }
       }
     }
