--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -36,7 +36,7 @@
       opacity: 0.6;
       counter-increment: step-counter -1;
       color: #518899;
-      font-family: 'TTNorms-Regular';
+      font-family: 'FFMarkWebProBook';
       @media(max-width: 600px) {
         font-size: 0.9em;
         line-height: 1.3;
@@ -68,7 +68,7 @@
 
     &::before {
       margin-left: 0;
-      font-family: 'TTNorms-Bold';
+      font-family: 'FFMarkWebProMedium';
     }
   }
 }
