--- a/partials/subscribe_form.hbs
+++ b/partials/subscribe_form.hbs
@@ -5,7 +5,7 @@
     <div class="form-group{{#if error}} error{{/if}}">
         <input type="text" class="subscribe-input-class" placeholder="Name" onfocus="" value="" autofocus="autofocus">
         {{input_email class=input_class placeholder=placeholder value=email autofocus=autofocus}}
-        <select class="country">
+        <!--<select class="country">
         	<option value="AF">Afghanistan</option>
         	<option value="AX">Åland Islands</option>
         	<option value="AL">Albania</option>
@@ -255,7 +255,7 @@
         	<option value="YE">Yemen</option>
         	<option value="ZM">Zambia</option>
         	<option value="ZW">Zimbabwe</option>
-        </select>
+        </select>-->
 
     </div>
     <button class="{{button_class}}" type="submit">Subscribe</button>
