--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -172,6 +172,9 @@
       -webkit-box-orient: vertical;
       overflow: hidden;
       max-height: 70px;
+      @media(max-width: 800px) {
+        margin: 10px 0 !important;
+      }
       @media(max-width: 600px) {
         display: none;
       }
