--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -440,6 +440,10 @@
 		overflow-x: visible;
 		clear: both;
 
+		@media(max-width: 600px) {
+			margin: 10px 8px 30px;
+		}
+
 		& > p {
 			margin: 0 0 20px !important;
 			@media(max-width: 600px) {
