--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -107,7 +107,7 @@
   .author {
     a {
       color: #105a6d;
-      font-family: 'TTNorms-Medium';
+      font-family: 'FFMarkWebProMedium';
 
       &:hover {
         text-decoration: none;
