--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -272,7 +272,7 @@
 
 			.single-author-name {
 				font-size: 0.9em !important;
-				font-family: 'TTNorms-Medium', sans-serif !important;
+				font-family: 'FFMarkWebProMedium', sans-serif !important;
 				color: #fff;
 			}
 
