--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -63,7 +63,7 @@ a {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'ProductSans-Bold', 'TTNorms-Medium', 'FFMarkWebProMedium', sans-serif;
+	font-family: 'ProductSans-Bold', 'FFMarkWebProMedium', 'FFMarkWebProMedium', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
@@ -75,7 +75,7 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'TTNorms-Medium', 'FFMarkWebProMedium', serif;
+	font-family: 'FFMarkWebProMedium', 'FFMarkWebProMedium', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
