--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -45,7 +45,7 @@
         max-width: 90%;
         margin: 20px auto 0;
         color: white;
-        font-family: TTNorms-Medium;
+        font-family: FFMarkWebProMedium;
         text-shadow: 0 0 20px #2f2d56;
       }
     }
