--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -57,7 +57,7 @@
 			}
 
 			a {
-				font-family: 'TTNorms-Medium',sans-serif !important;
+				font-family: 'FFMarkWebProMedium',sans-serif !important;
 			}
 
 			* {
@@ -119,7 +119,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'ProductSans-Bold', 'TTNorms-Medium';
+			font-family: 'ProductSans-Bold', 'FFMarkWebProMedium';
 			@media(max-width: 600px) {
 				font-size: 1.65em;
 				margin: 0 0 10px;
@@ -136,7 +136,7 @@
 					color: @secondary-color;
 				}
 				@media(max-width: 600px) {
-					font-family: 'ProductSans-Bold', 'TTNorms-Medium';
+					font-family: 'ProductSans-Bold', 'FFMarkWebProMedium';
 					font-weight: 500;
 				}
 			}
@@ -149,9 +149,9 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'ProductSans-Regular', 'FFMarkWebProMedium',TTNorms-Medium,serif;
+			font-family: 'ProductSans-Regular', 'FFMarkWebProMedium',FFMarkWebProMedium,serif;
 			@media(max-width: 600px) {
-				font-family: 'ProductSans-Regular',FFMarkWebProMedium,TTNorms-Medium,serif;
+				font-family: 'ProductSans-Regular',FFMarkWebProMedium,FFMarkWebProMedium,serif;
 				font-size: 1em !important;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
@@ -198,7 +198,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'TTNorms-Medium', sans-serif;
+		font-family: 'FFMarkWebProMedium', sans-serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
@@ -212,7 +212,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'FFMarkWebProMedium','TTNorms-Medium', 'sans-serif';
+			font-family: 'FFMarkWebProMedium','FFMarkWebProMedium', 'sans-serif';
 		}
 
 		.author-mobile {
@@ -237,7 +237,7 @@
 				}
 
 				.mobile-date {
-					font-family: 'TTNorms-Medium';
+					font-family: 'FFMarkWebProMedium';
 					font-size: .9em;
 				}
 			}
@@ -256,7 +256,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'FFMarkWebProMedium','TTNorms-Medium';
+			font-family: 'FFMarkWebProMedium','FFMarkWebProMedium';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -282,7 +282,7 @@
 				span {
 					line-height: 1.2;
 					font-size: 13px;
-					font-family: 'TTNorms-Medium','TTNorms-Medium';
+					font-family: 'FFMarkWebProMedium','FFMarkWebProMedium';
 				}
 
 				i {
@@ -320,7 +320,7 @@
 			&.author,
 			&.author-mobile {
 				span {
-					font-family: 'TTNorms-Medium', sans-serif;
+					font-family: 'FFMarkWebProMedium', sans-serif;
 					color: #4e6473;
 					line-height: 1;
 					overflow: hidden;
@@ -345,7 +345,7 @@
 
 			&.date {
 				span {
-					font-family: 'TTNorms-Medium', sans-serif;
+					font-family: 'FFMarkWebProMedium', sans-serif;
 					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -430,7 +430,7 @@
 			display: none;
 			padding: 13px 18px;
 			font-size: 14px;
-			font-family: 'TTNorms-Medium',serif;
+			font-family: 'FFMarkWebProMedium',serif;
 		}
 	}
 }
