--- a/src/less/global/searchbar.less
+++ b/src/less/global/searchbar.less
@@ -217,7 +217,7 @@ header {
   width: 226px;
   position: absolute;
   font-size: 1em;
-  font-family: 'TTNorms-Medium',sans-serif!important;
+  font-family: 'FFMarkWebProMedium',sans-serif!important;
   font-weight: 200;
   transition: 0.3s all;
   outline: none;
@@ -242,7 +242,7 @@ header {
 
     a {
       font-size: .8em;
-      font-family: TTNorms-Medium;
+      font-family: FFMarkWebProMedium;
     }
 
     &:nth-child(even) {
