--- a/src/less/pages/projects-page.less
+++ b/src/less/pages/projects-page.less
@@ -242,7 +242,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'TTNorms-Medium',FFMarkWebProMedium;
+        font-family: 'FFMarkWebProMedium',FFMarkWebProMedium;
         /*  &::after {
           content: "";
           width: 90px;
@@ -403,7 +403,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'TTNorms-Medium';
+                font-family: 'FFMarkWebProMedium';
                 margin-right: 5px;
               }
 
@@ -420,7 +420,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: 'TTNorms-Medium',sans-serif;
+        font-family: 'FFMarkWebProMedium',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
