--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -13,7 +13,7 @@
     padding-bottom: 10px;
     font-size: 1.3em;
     color: #518898 !important;
-    font-family: 'TTNorms-Medium',serif;
+    font-family: 'FFMarkWebProMedium',serif;
 
     @media(max-width: 600px) {
       margin-top: 5px;
@@ -46,7 +46,7 @@
 
       &::before {
         content: "Post " counter(step-counter, upper-roman) ". ";
-        font-family: 'TTNorms-Medium';
+        font-family: 'FFMarkWebProMedium';
         color: #518899;
 
         @media(max-width: 600px) {
@@ -64,7 +64,7 @@
   .currentPost {
     opacity: 1;
     margin-left: 0;
-    font-family: 'TTNorms-Medium';
+    font-family: 'FFMarkWebProMedium';
 
     &::before {
       margin-left: 0;
