--- a/src/less/pages/author.less
+++ b/src/less/pages/author.less
@@ -248,7 +248,7 @@
 			margin: 15px auto 0;
 			font-size: .9em;
 			color: #505050;
-			font-family: 'TTNorms-Medium',sans-serif;
+			font-family: 'FFMarkWebProMedium',sans-serif;
 			line-height: 1.5em;
 			font-weight: 500;
 			font-size: .95em;
