--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -41,12 +41,12 @@
 	}
 
 	.post-excerpt {
-		font-family: 'TTNorms-Medium';
+		font-family: 'FFMarkWebProMedium';
 	}
 
 	h3 {
 		margin-bottom: 10px;
-		font-family: 'TTNorms-Medium',serif;
+		font-family: 'FFMarkWebProMedium',serif;
 	}
 
 	.meta-info {
