--- a/src/less/pages/kanban.less
+++ b/src/less/pages/kanban.less
@@ -217,7 +217,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'TTNorms-Medium',FFMarkWebProMedium;
+        font-family: 'FFMarkWebProMedium',FFMarkWebProMedium;
         /*  &::after {
           content: "";
           width: 90px;
@@ -259,7 +259,7 @@
             font-size: .93em;
             line-height: 1.3;
             text-transform: capitalize;
-            font-family: 'TTNorms-Medium';
+            font-family: 'FFMarkWebProMedium';
             color: #3c3d46;
             margin: 2px 0 20px;
             width: 99%;
@@ -385,7 +385,7 @@
               span {
                 color: #7e7e7e;
                 font-size: 12px;
-                font-family: 'TTNorms-Medium';
+                font-family: 'FFMarkWebProMedium';
                 margin-right: 7px;
                 line-height: 1;
               }
@@ -397,7 +397,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: 'TTNorms-Medium',sans-serif;
+        font-family: 'FFMarkWebProMedium',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
