--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -88,7 +88,7 @@
       }
 
       .sort-method {
-        font-family: 'TTNorms-Medium';
+        font-family: 'FFMarkWebProMedium';
       }
     }
   }
@@ -189,7 +189,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'ProductSans-Regular','TTNorms-Medium',serif;
+          font-family: 'ProductSans-Regular','FFMarkWebProMedium',serif;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
@@ -202,7 +202,7 @@
         }
 
         .postcount {
-          font-family: 'TTNorms-Medium',serif;
+          font-family: 'FFMarkWebProMedium',serif;
           font-size: 1.3em;
         }
       }
@@ -214,7 +214,7 @@
         }
 
         .meta-item span {
-          font-family: 'TTNorms-Medium';
+          font-family: 'FFMarkWebProMedium';
         }
 
         .tags {
