--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -111,7 +111,7 @@
 		margin: 0 60px 25px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'ProductSans-Regular', 'TTNorms-Medium';
+		font-family: 'ProductSans-Regular', 'FFMarkWebProMedium';
 		@media(max-width: 800px) {
 			margin: 10px 60px 40px;
 		}
@@ -158,7 +158,7 @@
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 8px;
-		font-family: 'TTNorms-Medium';
+		font-family: 'FFMarkWebProMedium';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -313,7 +313,7 @@
 				}
 
 				span {
-					font-family: 'TTNorms-Medium',sans-serif;
+					font-family: 'FFMarkWebProMedium',sans-serif;
 					font-weight: 500;
 				}
 
@@ -453,7 +453,7 @@
 
 		a {
 			color: @theme-color;
-			font-family: 'TTNorms-Medium';
+			font-family: 'FFMarkWebProMedium';
 		}
 
 		p > a {
@@ -580,7 +580,7 @@
 			background: #e9f3f7;
 			color: #416e7d;
 			padding: 20px;
-			font-family: 'TTNorms-Medium',sans-serif;
+			font-family: 'FFMarkWebProMedium',sans-serif;
 			font-style: none;
 			font-size: 1em;
 			line-height: 1.6;
@@ -598,7 +598,7 @@
 			}
 
 			* {
-				font-family: 'TTNorms-Medium',sans-serif;
+				font-family: 'FFMarkWebProMedium',sans-serif;
 				font-weight: 500;
 				line-height: 1.6;
 				font-size: 0.9em;
